proj2/test/test_11811905_10.out
Error type 7 at Line 5: binary operation on non-number variables
Error type 8 at Line 14: incompatiable return type
Error type 8 at Line 16: incompatiable return type
